--- a/NewPageGrover/index.html
+++ b/NewPageGrover/index.html
@@ -270,6 +270,9 @@
                       </ul>
                   </div>
               </div>
+              <div style="text-align: center;">
+                <p style="cursor: pointer; border-radius: 2rem; box-shadow: 6px 6px 12px rgb(0,0,0, 0.1 );" class="header2 show-on-scroll">VER TIENDA DEMOSTRATIVA..</p>
+              </div>
           </div>
 
           <!-- footer -->
