--- a/NewPageGrover/index.html
+++ b/NewPageGrover/index.html
@@ -259,7 +259,7 @@
                       <h3 class="header2 show-on-scroll">Nunca fue tan fácil vender</h3>
                   </div>
                   <div id="image-vender">
-                      <img class="image-v inline-photo show-on-scroll" src="">
+                      <img class="image-v inline-photo show-on-scroll" src="/">
                   </div>
                   <div id="points-vender">
                       <h2>En 3 simples pasos:</h2>
