--- a/NewPageGrover/index.html
+++ b/NewPageGrover/index.html
@@ -19,14 +19,14 @@
             <header class="header">
                 <div class="logo-nav-container">
                     <img class="logo" src="img/branding3.png">
-                    <span class="menu-icon"><img src="img/open.png"></span> 
+                    <span class="menu-icon"><img style="width: 60%;" src="img/open.png"></span> 
                     <nav class="navegación">
                         <ul class="show">
-                            <span class="menu-icon-close"><img src="img/close.png"></span>
-                            <li><a id="boton123" href="#">Home</a></li>
-                            <li><a href="#">Nosotros</a></li>
-                            <li><a href="#">Servicios</a></li>
-                            <li><a href="#">Contacto</a></li>
+                            <span class="menu-icon-close"><img style="width: 60%;" src="img/close.png"></span>
+                            <li><a id="boton123" href="#">como funciona</a></li>
+                            <li><a href="#">Porque GroverApp</a></li>
+                            <li><a href="#">Tu pack</a></li>
+                            <li><a href="#">Vendé fácil</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -281,13 +281,9 @@
               
               <ul class="footer-right">
                   <li>
-                      <h2>Mapa del sitio</h2>
+                      <h2>¡Gracias por visitarnos!</h2>
                       <ul class="box">
-                          <li><p href="#">Cómo funciona GroverApp</p></li>
-                          <li><p href="#">¿Por qué Grover?</p></li>
-                          <li><p href="#">En Grover queremos ayudarte</p></li>
-                          <li><p href="#">Obetené tu pack y comenzá a vender</p></li>
-                          <li><p href="#">Nunca fue tan fácil vender</p></li>
+                          <li><img style="width: 200px;" src="img/branding4.png"></li>
                       </ul>
                   </li>
                   <li class="Soporte">
