--- a/NewPageGrover/index.html
+++ b/NewPageGrover/index.html
@@ -23,10 +23,10 @@
                     <nav class="navegación">
                         <ul class="show">
                             <span class="menu-icon-close"><img style="width: 60%;" src="img/close.png"></span>
-                            <li><a id="boton123" href="#">como funciona</a></li>
-                            <li><a href="#">Porque GroverApp</a></li>
-                            <li><a href="#">Tu pack</a></li>
-                            <li><a href="#">Vendé fácil</a></li>
+                            <li><a id="boton1" href="#">como funciona</a></li>
+                            <li><a id="boton2" href="#">Porque Grover</a></li>
+                            <li><a id="boton3" href="#">Tu pack</a></li>
+                            <li><a id="boton4" href="#">Vendé fácil</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -81,7 +81,7 @@
             </div>
     
         <!-- Soluciones Grover -->
-            <div class="container">
+            <div id="xqGrover" class="container">
                 <main id="main"><img class="image-porque inline-photo show-on-scroll" src="img/Sin título-1.jpg"></main>
                 <div id="titlePorque"><h3 class="header2 show-on-scroll">¿Por qué Grover?</h3></div>
                 <div id="izq-sup">
@@ -121,7 +121,7 @@
                 </div>
         <!-- packs GroverApp -->
     <div class="curved">
-            <div class="container-pack">         
+            <div id="tupack" class="container-pack">         
               <div id="title-pack"><h3 class="header2 show-on-scroll">Obetené tu pack y comenzá a vender</h3></div>
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div class="box-pack">
@@ -254,7 +254,7 @@
 
           <!-- Nunca fue tan fácil vender -->
           <div class="container-vender">
-              <div class="grid-vender">
+              <div id="vendefacil" class="grid-vender">
                   <div id="titulo-1">
                       <h3 class="header2 show-on-scroll">Nunca fue tan fácil vender</h3>
                   </div>
