--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="js/script.js"></script>
         <script src="js/show-on-scroll.js"></script>
+        <title>GroverAPP</title>
+        <link rel="icon" type="image/png" href="img/branding4.png">
     </head>
     <body>  
         <section>
@@ -23,8 +25,8 @@
                     <nav class="navegación">
                         <ul class="show">
                             <span class="menu-icon-close"><img style="width: 60%;" src="img/close.png"></span>
-                            <li><a id="boton1" href="#">como funciona</a></li>
-                            <li><a id="boton2" href="#">Porque Grover</a></li>
+                            <li><a id="boton1" href="#">¿Cómo funciona?</a></li>
+                            <li><a id="boton2" href="#">¿Porque Grover?</a></li>
                             <li><a id="boton3" href="#">Tu pack</a></li>
                             <li><a id="boton4" href="#">Vendé fácil</a></li>
                         </ul>
@@ -55,7 +57,7 @@
         <section>
             <div id="GroverApp" class="template-columns-groverApp">
                 <div id="title-ga">
-                    <h3 class="header2 show-on-scroll">Cómo funciona GroverApp</h3>
+                    <h3 class="header2 show-on-scroll">¿Cómo funciona GroverApp?</h3>
                 </div>
                 <div id="Imagen1-ga">
                     <img class="inline-photo show-on-scroll" src="img/img1-groverApp.jpg">
@@ -94,11 +96,11 @@
                 </div>
                 <div id="der-sup">
                     <h2 class="header2 show-on-scroll"><mark>Página 100% segura.</mark></h2>
-                    <p class="header2 show-on-scroll">La información que recaude la página viajara segura.</p>
+                    <p class="header2 show-on-scroll"></p>
                 </div>
                 <div id="der-inf">
                     <h2 class="header2 show-on-scroll"><mark>Página escalable</mark></h2>
-                    <p class="header2 show-on-scroll">Crecemos junto a tu negocio. Si tu negocio crece tu página también.</p>
+                    <p class="header2 show-on-scroll">Crecemos junto a tu negocio. Si tu negocio crece, tu página también.</p>
                 </div>
             </div>
 
@@ -176,10 +178,10 @@
                   <tbody>
                     <tr>
                         <td>&nbsp;</td>
-                        <td colspan="2">Catalogo ilimitado</td>
+                        <td colspan="2">Catálogo ilimitado</td>
                       </tr>
                       <tr class="compare-row">
-                        <td>Catalogo ilimitado</td>
+                        <td>Catálogo ilimitado</td>
                         <td><span class="tickgreen">10 productos</span></td>
                         <td><span class="tickgreen">✔</span></td>
                     </tr>
@@ -203,10 +205,10 @@
                     </tr>
                     <tr>
                       <td>&nbsp;</td>
-                      <td colspan="2">Metodos de pago a convenir con el comprador</td>
+                      <td colspan="2">Métodos de pago a convenir con el comprador</td>
                     </tr>
                     <tr>
-                      <td>Metodos de pago a convenir con el comprador</td>
+                      <td>Métodos de pago a convenir con el comprador</td>
                       <td><span class="tickblue">✔</span></td>
                       <td><span class="tickgreen">✔</span></td>
                     </tr>
@@ -264,8 +266,8 @@
                   <div id="points-vender">
                       <h2>En 3 simples pasos:</h2>
                     <ul>
-                        <li><p class="header2 show-on-scroll">1. Se ejecuta el pedido con el metodo de pago definido.</p></li>
-                        <li><p class="header2 show-on-scroll">2. llega el pedido en forma de mensaje al negocio.</p></li>
+                        <li><p class="header2 show-on-scroll">1. Se ejecuta el pedido con el método de pago definido.</p></li>
+                        <li><p class="header2 show-on-scroll">2. Llega el pedido en forma de mensaje al negocio.</p></li>
                         <li><p class="header2 show-on-scroll">3. Se realiza el envío o el takeawey.</p></li>
                       </ul>
                   </div>
