--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
             <header class="header">
                 <div class="logo-nav-container">
                     <img class="logo" src="img/branding3.png">
-                    <span class="menu-icon"><img style="width: 60%;" src="img/open.png"></span> 
+                    <span class="menu-icon"><img class="image-header" src="img/open.png"></span> 
                     <nav class="navegación">
                         <ul class="show">
-                            <span class="menu-icon-close"><img style="width: 60%;" src="img/close.png"></span>
+                            <span class="menu-icon-close"><img class="image-header" src="img/close.png"></span>
                             <li><a id="boton1" href="#">¿Cómo funciona?</a></li>
                             <li><a id="boton2" href="#">¿Porque Grover?</a></li>
                             <li><a id="boton3" href="#">Tu pack</a></li>
@@ -44,7 +44,7 @@
                         <h3 class="title">Tiendas GroverApp</h3>
                       </div>
                     </br>
-                        <h1 class="title2">¡Obtené ya mismo tu tienda! en GroverApp tus ventas no tienen comisión.</h1>
+                        <h1 class="title2">¡Obtené ya mismo tu tienda!<br>En GroverApp tus ventas no tienen comisión.</h1>
                     </br>
                         <button src="#" class="Obtner"><h2>Obtener</h2></button>
                     </aside>
@@ -96,7 +96,7 @@
                 </div>
                 <div id="der-sup">
                     <h2 class="header2 show-on-scroll"><mark>Página 100% segura.</mark></h2>
-                    <p class="header2 show-on-scroll"></p>
+                    <p class="header2 show-on-scroll">Tu página contara con certificado SSL, para proteger los datos de tus clientes</p>
                 </div>
                 <div id="der-inf">
                     <h2 class="header2 show-on-scroll"><mark>Página escalable</mark></h2>
