--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
                     <h2>Soporte</h2>
                     <ul class="box">
                         <li><p href="#">WhatsApp</p></li>
-                        <li><p href="#">+54 9 11 7365-9063</p></li>
+                        <li><a style="color:black; cursor: pointer;" href="https://wa.me/5491173659063?">+54 9 11 7365-9063</a></li>
                         <li><p>administracion@groverservices.com</p></li>
                     </ul>
                 </li>
