--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div class="box-pack">
                     <div class="icon-pack">
-                        <img src="img/iconfinder__67ui_2303172.png">
+                        <img class="icon-pack-2" src="img/iconfinder__67ui_2303172.png">
                     </div>                       
                         <h2 class="header2 show-on-scroll"><mark>Pack emprender</mark></h2>
                         <p class="header2 show-on-scroll">Tu pack ideal si sos emprendedor o emprendedora. Comenzá ya a vender con tu tienda.</p>
@@ -138,7 +138,7 @@
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div id="box-pack2">
                     <div class="icon-pack">
-                        <img src="img/iconfinder__71ui_2303176.png">
+                        <img class="icon-pack-2" src="img/iconfinder__71ui_2303176.png">
                     </div>                       
                         <h2 class="header2 show-on-scroll"><mark>Pack comercio</mark></h2>
                         <p class="header2 show-on-scroll">Tu pack ideal si sos comerciante. Comenzá ya a vender con tu tienda.</p>
