--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                     </br>
                         <h1 class="title2">¡Obtené ya mismo tu tienda!<br>En GroverApp tus ventas no tienen comisión.</h1>
                     </br>
-                        <button src="#" class="Obtner"><h2>Obtener</h2></button>
+                        <button src="#" id="boton5" class="Obtner"><h2>Obtener</h2></button>
                     </aside>
                     <aside class="contenido2">
                     </aside>
@@ -116,7 +116,7 @@
                             <p class="header2 show-on-scroll">Debido a los tiempos duros que el mundo esta atravesando, en Grover <b><mark>decidimos ayudar a proyectos y emprendimientos</mark></b> brindandoles páginas/tiendas especialmente diseñadas para vender y a un precio super reducido.</p>
                         </br>
                             <button href="https://wa.me/5491173659063?text=Hola Como estas?&lang=es" class="Obtner1">
-                                <h2>Contactar</h2>
+                                <h2 id="boton6">Contactar</h2>
                             </button>
                         </aside>
                     </div>
@@ -279,7 +279,7 @@
 
           <!-- footer -->
 
-          <footer class="footer">
+          <footer id="footerScroll" class="footer">
               
               <ul class="footer-right">
                   <li>
@@ -306,9 +306,9 @@
               </ul>
               <div class="footer-left">
                 <div class="socials">
-                    <img href="#" src="img/iconfinder_Instagram_social_media_logo_1964411.png">
-                    <img href="#" src="img/iconfinder_whatsapp_social_media_logo-_1964402.png">
-                    <img href="#" src="img/iconfinder_Google_Search_social_media_logo-_1964407.png">
+                    <a href="https://www.instagram.com/grover.app/"><img style="cursor: pointer;" src="img/iconfinder_Instagram_social_media_logo_1964411.png"></a>
+                    <a href="https://wa.me/5491173659063?"><img style="cursor: pointer;" src="img/iconfinder_whatsapp_social_media_logo-_1964402.png"></a>
+                    <a><img href="#" style="cursor: pointer;" src="img/iconfinder_Google_Search_social_media_logo-_1964407.png"></a>
                 </div>
             </div>
               <div class="footer-bottom">
