header-responsive-closeToScroll

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
                     <nav class="navegación">
                         <ul class="show">
                             <span class="menu-icon-close"><img class="image-header" src="img/close.png"></span>
-                            <li><a id="boton1" href="#">¿Cómo funciona?</a></li>
-                            <li><a id="boton2" href="#">¿Porque Grover?</a></li>
-                            <li><a id="boton3" href="#">Tu pack</a></li>
-                            <li><a id="boton4" href="#">Vendé fácil</a></li>
+                            <li id="closer"><a id="boton1" href="#">¿Cómo funciona?</a></li>
+                            <li id="closer2"><a id="boton2" href="#">¿Porque Grover?</a></li>
+                            <li id="closer3"><a id="boton3" href="#">Tu pack</a></li>
+                            <li id="closer4"><a id="boton4" href="#">Vendé fácil</a></li>
                         </ul>
                     </nav>
                 </div>
