--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
             <header class="header">
                 <div class="logo-nav-container">
                     <img class="logo" src="img/branding3.png">
-                    <span class="menu-icon"><img class="image-header" src="img/open.png"></span> 
+                    <div class="menu-icon"><img class="image-header" src="img/open.png"></div> 
                     <nav class="navegación">
                         <ul class="show">
-                            <span class="menu-icon-close"><img class="image-header" src="img/close.png"></span>
+                            <div class="menu-icon-close"><img class="image-header" src="img/close.png"></div>
                             <li id="closer"><a id="boton1" href="#">¿Cómo funciona?</a></li>
                             <li id="closer2"><a id="boton2" href="#">¿Porque Grover?</a></li>
                             <li id="closer3"><a id="boton3" href="#">Tu pack</a></li>
