logo para titulo

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <script src="js/script.js"></script>
         <script src="js/show-on-scroll.js"></script>
         <title>GroverAPP</title>
-        <link rel="icon" type="image/png" href="img/branding4.png">
+        <link rel="icon" type="image/png" href="img/Sin título-1.png">
     </head>
     <body>  
         <section>
