--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/show-on-scroll.js"></script>
         <title>GroverAPP</title>
-        <link rel="icon" type="image/png" href="img/Sin título-1.png">
+        <link rel="icon"  href="img/Sin título-1.png">
     </head>
     <body>  
         <section>
         <!-- header -->
             <header class="header">
                 <div class="logo-nav-container">
-                    <img class="logo" type="image/png" src="img/branding3.png">
+                    <img class="logo"  src="img/branding3.png">
                     <span class="menu-icon"><img class="image-header" src="img/open.png"></span> 
                     <nav class="navegación">
                         <ul class="show">
@@ -58,21 +58,21 @@
                     <h3 class="header2 show-on-scroll">¿Cómo funciona GroverApp?</h3>
                 </div>
                 <div id="Imagen1-ga">
-                    <img class="inline-photo show-on-scroll" type="image/jpeg" src="img/img1-groverApp.jpg">
+                    <img class="inline-photo show-on-scroll"  src="img/img1-groverApp.jpg">
                 </div>
                 <div id="text1-ga">
                     <h2 class="header2 show-on-scroll"><mark>1. Publicá tus productos</mark></h2>
                     <p class="header2 show-on-scroll">Creamos tu catálogo con todos tus productos en GroverApp. Nos encargamos de que todo este en su lugar y ofrecemos actualizaciones.</p>
                 </div>
                 <div id="Imagen2-ga">
-                    <img class="inline-photo show-on-scroll" type="image/jpeg" src="img/img2-groverApp.jpg">
+                    <img class="inline-photo show-on-scroll"  src="img/img2-groverApp.jpg">
                 </div>
                 <div id="text2-ga">
                     <h2 class="header2 show-on-scroll"><mark>2. Vendé</mark></h2>
                     <p class="header2 show-on-scroll">Te cobramos 0$ por cada venta y otorgamos la libertad de cobrar como vos más prefieras. Los pedidos llegan en forma de mensaje al WhatsApp del negocio.</p>
                 </div>
                 <div id="Imagen3-ga">
-                    <img class="inline-photo show-on-scroll" type="image/jpeg" src="img/img3-groverApp.jpg">
+                    <img class="inline-photo show-on-scroll"  src="img/img3-groverApp.jpg">
                 </div>
                 <div id="text3-ga">
                     <h2 class="header2 show-on-scroll"><mark>3. Envía</mark></h2>
@@ -82,7 +82,7 @@
     
         <!-- Soluciones Grover -->
             <div id="xqGrover" class="container">
-                <main id="main"><img class="image-porque inline-photo show-on-scroll" type="image/jpeg" src="img/Sin título-1.jpg"></main>
+                <main id="main"><img class="image-porque inline-photo show-on-scroll"  src="img/Sin título-1.jpg"></main>
                 <div id="titlePorque"><h3 class="header2 show-on-scroll">¿Por qué Grover?</h3></div>
                 <div id="izq-sup">
                     <h2 class="header2 show-on-scroll"><mark>Decile adiós a las comisiones</mark></h2>
@@ -106,7 +106,7 @@
             </div>
                 <div class="template-columns">
                     <div class="grid">
-                        <img class="image inline-photo show-on-scroll" type="image/jpeg" src="img/celular.jpg">
+                        <img class="image inline-photo show-on-scroll"  src="img/celular.jpg">
                     </div>
                     <div class="grid">
                             <h3 class="titleLeyenda header2 show-on-scroll" class="titleLeyenda">En Grover queremos ayudarte.</h3>
@@ -126,7 +126,7 @@
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div class="box-pack">
                     <div class="icon-pack">
-                        <img class="icon-pack-2" type="image/jpeg" src="img/iconfinder__67ui_2303172.png">
+                        <img class="icon-pack-2"  src="img/iconfinder__67ui_2303172.png">
                     </div>                       
                         <h2 class="header2 show-on-scroll"><mark>Pack emprender</mark></h2>
                         <p class="header2 show-on-scroll">Tu pack ideal si sos emprendedor o emprendedora. Comenzá ya a vender con tu tienda.</p>
@@ -136,7 +136,7 @@
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div id="box-pack2">
                     <div class="icon-pack">
-                        <img class="icon-pack-2" type="image/jpeg" src="img/iconfinder__71ui_2303176.png">
+                        <img class="icon-pack-2"  src="img/iconfinder__71ui_2303176.png">
                     </div>                       
                         <h2 class="header2 show-on-scroll"><mark>Pack comercio</mark></h2>
                         <p class="header2 show-on-scroll">Tu pack ideal si sos comerciante. Comenzá ya a vender con tu tienda.</p>
@@ -259,7 +259,7 @@
                       <h3 class="header2 show-on-scroll">Nunca fue tan fácil vender</h3>
                   </div>
                   <div id="image-vender">
-                      <img class="image-v inline-photo show-on-scroll" type="image/jpeg" src="img/vender facil .jpg">
+                      <img class="image-v inline-photo show-on-scroll"  src="img/vender facil .jpg">
                   </div>
                   <div id="points-vender">
                       <h2>En 3 simples pasos:</h2>
