test Update from server

--- a/New folder/public/index.html
+++ b/New folder/public/index.html
@@ -3,8 +3,6 @@
     <head>
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <title>GroverAPP</title>
-        <link rel="icon"  href="img/Sin título-1.png">
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
@@ -12,6 +10,8 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/show-on-scroll.js"></script>
+        <title>GroverAPP</title>
+        <link rel="icon"  href="img/Sin título-1.png">
     </head>
     <body>  
         <section>
@@ -24,7 +24,7 @@
                         <ul class="show">
                             <span class="menu-icon-close"><img class="image-header" type="image/png" src="img/close.png"></span>
                             <li id="closer"><a id="boton1" href="#">¿Cómo funciona?</a></li>
-                            <li id="closer2"><a id="boton2" href="#">¿Por qué Grover?</a></li>
+                            <li id="closer2"><a id="boton2" href="#">¿Porque Grover?</a></li>
                             <li id="closer3"><a id="boton3" href="#">Tu pack</a></li>
                             <li id="closer4"><a id="boton4" href="#">Vendé fácil</a></li>
                         </ul>
@@ -271,7 +271,7 @@
                   </div>
               </div>
               <div style="text-align: center;">
-                <p style="cursor: pointer; border-radius: 2rem; box-shadow: 6px 6px 12px rgb(0,0,0, 0.08 );" onclick="mostrarTienda()" class="header2 show-on-scroll">VER TIENDA DEMOSTRATIVA..</p>
+                <p style="cursor: pointer; border-radius: 2rem; box-shadow: 6px 6px 12px rgb(0,0,0, 0.08 );" class="header2 show-on-scroll">VER TIENDA DEMOSTRATIVA..</p>
               </div>
           </div>
 
