Cambios en links de Mercadopago y precios

--- a/public/indexCom.html
+++ b/public/indexCom.html
@@ -32,11 +32,11 @@
                 <div class="content">
                     <h2>01</h2>
                     <h3>1 mes</h3>
-                    <span class="ahorro">600$c/mes</span>
+                    <span class="ahorro">600$ / mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 0,00$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 30 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <span class="ahorro"></span>
+                    <p style="display: block;">Tu tienda habilitada durante 30 días.</p>
+                    <a href="https://mpago.la/1UvA9gi">Comprar por $600,00</a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     <br>
                     <span class="ahorro">Te ahorras hasta 366,00$*</span>
                     <p style="display: block;">Tu tienda habilitada durante 180 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <a href="https://mpago.la/2ZKQ91w">Comprar</a>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                     <br>
                     <span class="ahorro">Te ahorras hasta 1.212,00$*</span>
                     <p style="display: block;">Tu tienda habilitada durante 360 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <a href="https://mpago.la/2qBeQgU">Comprar</a>
                 </div>
             </div>
         </div>
