--- a/public/indexEmp.html
+++ b/public/indexEmp.html
@@ -32,11 +32,11 @@
                 <div class="content">
                     <h2>01</h2>
                     <h3>1 mes</h3>
-                    <span class="ahorro">400$c/mes</span>
+                    <span class="ahorro">400$ /mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 0$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 30 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <span class="ahorro"></span>
+                    <p style="display: block;">Tu tienda habilitada durante 30 días.</p>
+                    <a href="https://mpago.la/1GWJurJ">Comprar por $400,00</a>
                 </div>
             </div>
         </div>
@@ -45,11 +45,11 @@
                 <div class="content">
                     <h2>06</h2>
                     <h3>6 meses</h3>
-                    <span class="ahorro">359$c/mes</span>
+                    <span class="ahorro">359$ /mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 246,00$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 180 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <span class="ahorro">Te ahorras hasta 246$</span>
+                    <p style="display: block;">Tu tienda habilitada durante 180 días.</p>
+                    <a href="https://mpago.la/1G3BHeF">Comprar por $2.154,00</a>
                 </div>
             </div>
         </div>
@@ -58,11 +58,11 @@
                 <div class="content">
                     <h2>12</h2>
                     <h3>12 meses</h3>
-                    <span class="ahorro">329$c/mes</span>
+                    <span class="ahorro">329$ /mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 852,00$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 360 días, desde el momento en que se encuentra activa.</p>
-                    <a href="#">Comprar</a>
+                    <span class="ahorro">Te ahorras hasta 852$</span>
+                    <p style="display: block;">Tu tienda habilitada durante 360 días</p>
+                    <a href="https://mpago.la/283NZCY">Comprar por $3.948,00</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <section>
     <div class="soporte">
 
-    <p>Ante cualquier consulta no dudes en contactarnos, estamos para ayudarte.</p>
+    <p>Ofrecemos un descuento adicional para tu primer mes con nosotros. Contactanos! estamos para ayudarte.</p>
     <a href="https://wa.me/5491173659063?text=Hola, me comunico desde el pack Emprender.&lang=es" class="hola_btn hola_btn--lg">
         <span>Contactanos</span>
     </a>
