--- a/public/indexCom.html
+++ b/public/indexCom.html
@@ -32,7 +32,7 @@
                 <div class="content">
                     <h2>01</h2>
                     <h3>1 mes</h3>
-                    <span class="ahorro">600$ / mes</span>
+                    <span class="ahorro">600$ /mes</span>
                     <br>
                     <span class="ahorro"></span>
                     <p style="display: block;">Tu tienda habilitada durante 30 días.</p>
@@ -45,11 +45,11 @@
                 <div class="content">
                     <h2>06</h2>
                     <h3>6 meses</h3>
-                    <span class="ahorro">539$c/mes</span>
+                    <span class="ahorro">539$ /mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 366,00$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 180 días, desde el momento en que se encuentra activa.</p>
-                    <a href="https://mpago.la/2ZKQ91w">Comprar</a>
+                    <span class="ahorro">Te ahorras hasta 366,00$</span>
+                    <p style="display: block;">Tu tienda habilitada durante 180 días.</p>
+                    <a href="https://mpago.la/2ZKQ91w">Comprar por $3.234,00</a>
                 </div>
             </div>
         </div>
@@ -60,9 +60,9 @@
                     <h3>12 meses</h3>
                     <span class="ahorro">499$c/mes</span>
                     <br>
-                    <span class="ahorro">Te ahorras hasta 1.212,00$*</span>
-                    <p style="display: block;">Tu tienda habilitada durante 360 días, desde el momento en que se encuentra activa.</p>
-                    <a href="https://mpago.la/2qBeQgU">Comprar</a>
+                    <span class="ahorro">Te ahorras hasta 1.212,00$</span>
+                    <p style="display: block;">Tu tienda habilitada durante 360 días.</p>
+                    <a href="https://mpago.la/2qBeQgU">Comprar por $5.988,00</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <section>
     <div class="soporte">
 
-    <p>Ante cualquier consulta no dudes en contactarnos, estamos para ayudarte.</p>
+    <p>Ofrecemos un descuento adicional para tu primer mes con nosotros. Contactanos! estamos para ayudarte.</p>
     <a href="https://wa.me/5491173659063?text=Hola, me comunico desde el pack Comercio.&lang=es" class="hola_btn hola_btn--lg">
         <span>Contactanos</span>
     </a>
