--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,6 @@
                 </div>
             </header>
             <!-- portada -->
-            <div>
-                <video class="video" autoplay="autoplay" muted loop><source src="img/5.mp4"/></video>
             <div class="fondo">
                 <div class="contenedor">
                     <aside class="contenido">
@@ -48,6 +46,10 @@
                     </aside>
                     <aside class="contenido2">
                     </aside>
+                </div>
+                <div class="phone">
+                    <div class="circlePhone"></div>
+                    <img src="./img/Phone.png">
                 </div>
             </div>
         </section>
@@ -122,7 +124,7 @@
         <!-- packs GroverApp -->
     <div class="curved">
             <div id="tupack" class="container-pack">         
-              <div id="title-pack"><h3 class="header2 show-on-scroll">Obetené tu pack y comenzá a vender</h3></div>
+              <div id="title-pack"><h3 class="header2 show-on-scroll">Obtené tu pack y comenzá a vender</h3></div>
             <div class="boxs image2 inline-photo show-on-scroll">
                 <div class="box-pack">
                     <div class="icon-pack">
